 * Lua Engine:
   * Add wesnoth.log_replay which exposes a little-used functionality of injecting arbitrary
     logging data into a saved game.
   * Small change to animator API - facing parameter replaced with target and required to be
     a space adjacent to the unit.
   * New modifiable theme attribute in wesnoth.game_config
   * New wesnoth.zoom() function allows changing the zoom level
 * Multiplayer:
   * Fixed statistics being lost when reloading an MP game.
 * Performance:
   * Greatly speeded up switching between add-ons in the add-on manager (bug #25523)
 * User Interface:
   * Updated Attack Predictions dialog to GUI2.
   * Updated Story screen to GUI2.
   * Double-clicking an add-on now installs, updates, uninstalls or publishes it depending
     on the situation.
   * Fixed file path being truncated on the wrong side in the File Browser.
   * Improved Hotkey category sorting interface in Preferences.
   * Improved Addon Manager and MP Staging interfaces at low resolutions.
   * Fixed bug that allows you to use the minimap to bypass view locking
   * You can now change the theme (in preferences) while a game is in progress.
 * WML Engine:
   * Add base_income key to [store_side]
   * Fix issues with alpha animations on hidden units (#14503)
   * Extensions to GUI2 Canvas ([drawing] tag in dialogs):
     * New [round_rectangle] shape - a rectangle plus corner_radius
     * [circle] shape can now be drawn filled; color key is now border_color
     * [image] has new resize_mode=tile_center
     * Canvas colors can now be expressed as formulas. The formula must return
       the color as a list of its components, eg "([r, g, b, a])"
   * Empty tags are no longer written to the configs of [unit]s and [side]s.
   * New [change_theme] tag to change the theme mid-scenario
   * New [zoom] tag allows changing the zoom level from an event
   * [kill]animate=yes now plays victory animations if applicable

Version 1.13.7:
 * AI: